dyntopo "detail flood fill" doesn't work in same cases #52537

Closed
opened 2017-08-25 15:26:13 +02:00 by Massimiliano Puliero · 6 comments

System Information
win7 64 gtx970

Blender Version
Broken: blender-2.78.0-git.09eac01-windows64

Short description of error
dyntopo -detail flood fill- doesn't work in some cases

Exact steps for others to reproduce the error
open the file and press -detail flood fill- in the dyntopo panel.
Even changing the resolution the mesh doesn't tassellate.

Thank you

flood.blend

**System Information** win7 64 gtx970 **Blender Version** Broken: blender-2.78.0-git.09eac01-windows64 **Short description of error** dyntopo -detail flood fill- doesn't work in some cases **Exact steps for others to reproduce the error** open the file and press -detail flood fill- in the dyntopo panel. Even changing the resolution the mesh doesn't tassellate. Thank you [flood.blend](https://archive.blender.org/developer/F725304/flood.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero

Added subscriber: @ChameleonScales

Added subscriber: @ChameleonScales

Adding info :
Detail flood fill doesn't work when the origin of the object is not at the center of the object. Doing Transform > Origin to Geometry fixes the issue.

Tested on 2.79RC2 and 2.78c

Adding info : Detail flood fill doesn't work when the origin of the object is not at the center of the object. Doing Transform > Origin to Geometry fixes the issue. Tested on 2.79RC2 and 2.78c

This issue was referenced by a22590a62c

This issue was referenced by a22590a62ce513752d1ca08b532ad66e36d35898

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52537
No description provided.